<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Q-Wallet</string>
    <string name="AvailableWiFi">WiFi</string>
    <string name="activity_splash_intro">The World\'s First Decentralized Mobile Network</string>
    <string name="powered">Powered by Blockchain</string>
    <string name="apploading">loading...</string>
    <string name="wallet">Wallet</string>
    <string name="market">Markets</string>
    <string name="vpn">VPN</string>
    <string name="wifi">WIFI</string>
    <string name="transaction">transaction</string>
    <string name="nearby">NEARBY</string>
    <string name="all">ALL</string>
    <string name="registerwifi">Register you Wi-Fi</string>
    <string name="CreateP2pNetwork">Creating p2p network...</string>
    <string name="NoNetWork">No Network, Please try to connect a network.</string>
    <string name="qlinkRegistedWifi">Choose a WiFi</string>
    <string name="pleaseEnableWifi">Please enable wifi</string>
    <string name="waitP2pNetWork">Please wait while p2p network is created.</string>
    <string name="registeyouwifi">Register your wifi</string>
    <string name="shareotherwifi">Share Other\'s wifi</string>
    <string name="wifidetails">WIFI DETAILS</string>
    <string name="privatekeyerror">This is not a valid private key.</string>
    <string name="privatekeyisnone">Please input your private key.</string>
    <string name="passwordisNone">Please input your password!</string>
    <string name="importWalletSuccess">import wallet success</string>
    <string name="createWalletSuccess">create wallet success</string>
    <string name="google_map_key">AIzaSyARhjAjyhSIyWxdYWuOkR8JDSopj1xp7gw</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="useLZO">LZO Compression</string>
    <string name="client_no_certificate">No Certificate</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="client_key_title">Client Certificate Key</string>
    <string name="client_pkcs12_title">PKCS12 File</string>
    <string name="ca_title">CA Certificate</string>
    <string name="no_certificate">You must select a certificate</string>
    <string name="copyright_guicode">Source code and issue tracker available at https://github.com/schwabe/ics-WINQ/</string>
    <string name="copyright_others">This program uses the following components; see the source code for full details on the licenses</string>
    <string name="about">About</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="vpn_type">Type</string>
    <string name="pkcs12pwquery">PKCS12 Password</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="useTLSAuth">Use TLS Authentication</string>
    <string name="tls_direction">TLS Direction</string>
    <string name="ipv6_dialog_tile">Enter IPv6 Address/Netmask in CIDR Format (e.g. 2000:dd::23/64)</string>
    <string name="ipv4_dialog_title">Enter IPv4 Address/Netmask in CIDR Format (e.g. 1.2.3.4/24)</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="ipv6_address">IPv6 Address</string>
    <string name="custom_option_warning">Enter custom WINQ options. Use with caution. Also note that many of the tun related WINQ settings cannot be supported by design of the VPNSettings. If you think an important option is missing contact the author</string>
    <string name="auth_username">Username</string>
    <string name="auth_pwquery">Password</string>
    <string name="static_keys_info">For the static configuration the TLS Auth Keys will be used as static keys</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="duplicate_profile_name">Please enter a unique Profile Name</string>
    <string name="profilename">Profile Name</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_ca_cert_selected">You must select a CA certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="pw_query_hint">(leave empty to query on demand)</string>
    <string name="vpn_shortcut">WINQ Shortcut</string>
    <string name="vpn_launch_title">Connecting to VPN…</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="random_host_prefix">Random Host Prefix</string>
    <string name="random_host_summary">Adds 6 random chars in front of hostname</string>
    <string name="custom_config_title">Enable Custom Options</string>
    <string name="custom_config_summary">Specify custom options. Use with care!</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="clear_log">clear log</string>
    <string name="title_cancel">Cancel Confirmation</string>
    <string name="cancel_connection_query">Disconnect the connected VPN/cancel the connection attempt?</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (--remote-cert-tls server)</string>
    <string name="check_remote_tlscert_title">Expect TLS server certificate</string>
    <string name="remote_tlscn_check_summary">Checks the Remote Server Certificate Subject DN</string>
    <string name="remote_tlscn_check_title">Certificate Hostname Check</string>
    <string name="enter_tlscn_dialog">Specify the check used to verify the remote certificate DN (e.g. C=DE, L=Paderborn, OU=Avian IP Carriers, CN=WINQ.blinkt.de)\n\nSpecify the complete DN or the RDN (WINQ.blinkt.de in the example) or an RDN prefix for verification.\n\nWhen using RDN prefix \"Server\" matches \"Server-1\" and \"Server-2\"\n\nLeaving the text field empty will check the RDN against the server hostname.\n\nFor more details see the WINQ 2.3.1+ manpage under —verify-x509-name</string>
    <string name="enter_tlscn_title">Remote certificate subject</string>
    <string name="tls_key_auth">Enables the TLS Key Authentication</string>
    <string name="tls_auth_file">TLS Auth File</string>
    <string name="pull_on_summary">Requests IP addresses, routes and timing options from the server.</string>
    <string name="pull_off_summary">No information is requested from the server. Settings need to be specified below.</string>
    <string name="use_pull">Pull Settings</string>
    <string name="dns">DNS</string>
    <string name="override_dns">Override DNS Settings by Server</string>
    <string name="dns_override_summary">Use your own DNS Servers</string>
    <string name="searchdomain">searchDomain</string>
    <string name="dns1_summary">DNS Server to be used.</string>
    <string name="dns_server">DNS Server</string>
    <string name="secondary_dns_message">Secondary DNS Server used if the normal DNS Server cannot be reached.</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="ignored_pushed_routes">Ignore pushed routes</string>
    <string name="ignore_routes_summary">Ignore routed pushed by the server.</string>
    <string name="default_route_summary">Redirects all Traffic over the VPN</string>
    <string name="use_default_title">Use default Route</string>
    <string name="custom_route_message">Enter custom routes. Only enter destination in CIDR format. \"10.0.0.0/8 2002::/16\" would direct the networks 10.0.0.0/8 and 2002::/16 over the VPN.</string>
    <string name="custom_route_message_excluded">Routes that should NOT be routed over the VPN. Use the same syntax as for included routes.</string>
    <string name="custom_routes_title">Custom Routes</string>
    <string name="custom_routes_title_excluded">Excluded Networks</string>
    <string name="log_verbosity_level">Log verbosity level</string>
    <string name="float_summary">Allows authenticated packets from any IP</string>
    <string name="float_title">Allow floating server</string>
    <string name="custom_options_title">Custom Options</string>
    <string name="edit_vpn">Edit VPN Settings</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="import_vpn">Import</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="wallet_password">wallet password</string>
    <string name="No_Wallet">No Wallet</string>
    <string name="Whoops_You_have_no_wallet_yet">Whoops!\n You have no wallet yet</string>
    <string name="create_new_wallet">create new wallet</string>
    <string name="enter_private_key">enter private key</string>
    <string name="do_it_later">do it later</string>
    <string name="scan_private_key_qr">scan private key qr</string>
    <string name="You_need_a_wallet_to_use_all_of_the_WINQ_dApp_functionalities">You_need a wallet to use all of the WINQ dApp functionalities</string>
    <string name="privatekey">privatekey</string>
    <string name="share_with_friends">Referral Reward</string>
    <string name="crypto_wallet">Crypto Wallet</string>
    <string name="join_the_community">Join the Community</string>
    <string name="contact_us">Contact Us</string>
    <string name="login_register">Login/Register</string>
    <string name="for_voting_mining_node">For Voting/Mining Node</string>
    <string name="minimum_amount">Minimum Amount:</string>
    <string name="minimum_staking_period_10_days">Minimum Staking Period: 10 days</string>
    <string name="your_staked_amount_whole_network_staked_amount_x_8_302_qgas">Your staked amount/whole network staked amount x 8,302 QGAS</string>
    <string name="mining_earning_per_day">Mining Earning per day:</string>
    <string name="miners_to_share_the_pool_of_8219_qgas_miner_earning_voting_mining_earning">Miners to share the pool of 8219 QGAS Miner Earning = Voting + Mining Earning</string>
    <string name="stake_1_million_qlc_or_above_is_entitled_to_be_a_mining_node_or_run_a_mining_pool">*Stake 1 million QLC or above is entitled to be a mining node, or run a mining pool</string>
    <string name="for_confidant_station">For Confidant Station</string>
    <string name="minimum_staking_period_90_days">Minimum Staking Period: 90 days</string>
    <string name="rewards_stake">Rewards:</string>
    <string name="same_as_voting_node_qgas_consumption">Same as voting node - QGAS consumption</string>
    <string name="first_three_month_promotional_period_qgas_consumption_will_be_0">*First three month promotional period QGAS consumption will be 0</string>
    <string name="purchase_a_confidant_with_20_discount_with_crypto_payment">Purchase a Confidant with 20% discount with Crypto Payment</string>
    <string name="for_token_mintage">For Token Mintage</string>
    <string name="minimum_staking_period_180_days">Minimum Staking Period: 180 days</string>
    <string name="same_as_voting_node_and_entitled_to_issue_a_token">Same as voting node and entitled to issue a token</string>
    <string name="voting_earning_per_day">Voting Earning per day:</string>
</resources>