<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f2f2f2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="15sp"
            android:text="@string/for_voting_mining_node"
            android:textColor="@color/color_29282a" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_amount"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/color_29282a"
            android:text="1 QLC"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_staking_period_10_days"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/voting_earning_per_day"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_29282a"
        android:text="@string/your_staked_amount_whole_network_staked_amount_x_8_302_qgas"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/mining_earning_per_day"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_29282a"
        android:text="@string/miners_to_share_the_pool_of_8219_qgas_miner_earning_voting_mining_earning"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_808080"
        android:text="@string/stake_1_million_qlc_or_above_is_entitled_to_be_a_mining_node_or_run_a_mining_pool"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="15sp"
            android:text="@string/for_confidant_station"
            android:textColor="@color/color_29282a" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_amount"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/color_29282a"
            android:text="2,000 QLC"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_staking_period_90_days"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/rewards_stake"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_29282a"
        android:text="@string/same_as_voting_node_qgas_consumption"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:text="@string/first_three_month_promotional_period_qgas_consumption_will_be_0"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_808080"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/purchase_a_confidant_with_20_discount_with_crypto_payment"
        android:textColor="@color/color_29282a"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="15sp"
            android:text="@string/for_token_mintage"
            android:textColor="@color/color_29282a" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_amount"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/color_29282a"
            android:text="500,000 QLC"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/minimum_staking_period_180_days"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="13sp"
            android:text="@string/rewards_stake"
            android:textColor="@color/color_808080"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/color_29282a"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/same_as_voting_node_and_entitled_to_issue_a_token"
        android:layout_height="wrap_content" />
</LinearLayout>