<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="88dp">
        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="58dp"
            android:src="@mipmap/icon_user_default"
            android:layout_marginLeft="15dp"
            android:layout_height="58dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:text="@string/login_register"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/userId"
                android:text="ID: 123456"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="15dp"
            android:src="@mipmap/icon_enter1"
            android:layout_marginRight="15dp"
            android:layout_height="15dp" />

    </LinearLayout>
    
    <com.stratagile.qlink.view.MyItemView
        android:id="@+id/cryptoWallet"
        android:layout_width="match_parent"
        app:showNextmy="true"
        app:srcmy="@mipmap/icon_crypto_wallet"
        app:textmy="@string/crypto_wallet"
        android:layout_height="54dp">

    </com.stratagile.qlink.view.MyItemView>
    <com.stratagile.qlink.view.MyItemView
        android:id="@+id/shareFriend"
        android:layout_width="match_parent"
        app:showNextmy="true"
        app:srcmy="@mipmap/icon_share_friend"
        app:textmy="@string/share_with_friends"
        android:layout_height="54dp">

    </com.stratagile.qlink.view.MyItemView>
    <com.stratagile.qlink.view.MyItemView
        android:id="@+id/joinCommunity"
        android:layout_width="match_parent"
        app:showNextmy="true"
        app:srcmy="@mipmap/icon_join_community"
        app:textmy="@string/join_the_community"
        android:layout_height="54dp">

    </com.stratagile.qlink.view.MyItemView>
    <com.stratagile.qlink.view.MyItemView
        android:visibility="gone"
        android:id="@+id/contactUs"
        android:layout_width="match_parent"
        app:showNextmy="true"
        app:srcmy="@mipmap/icon_contact_us"
        app:textmy="@string/contact_us"
        android:layout_height="54dp">

    </com.stratagile.qlink.view.MyItemView>
    <com.stratagile.qlink.view.MyItemView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        app:showNextmy="true"
        app:srcmy="@mipmap/icon_settings"
        app:textmy="@string/settings"
        android:layout_height="54dp">

    </com.stratagile.qlink.view.MyItemView>

    <View
        android:id="@+id/testView"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
</LinearLayout>